# fastapi_kafka

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
